# poetry-optional-no-extra

./: .gitattributes  .gitignore  README.md  pyproject.toml
poetry_optional_no_extra-0.1.0/poetry_optional_no_extra-0.1.0.dist-info/: METADATA  RECORD
poetry_optional_no_extra-0.2.0/poetry_optional_no_extra-0.2.0.dist-info/: METADATA  RECORD
poetry_optional_no_extra-0.3.0/poetry_optional_no_extra-0.3.0.dist-info/: METADATA  RECORD
